# lorenzett

./: .gitignore  CMakeLists.txt
docker/base/: .Dockerfile.swo  .Dockerfile.swp  Dockerfile
geometry/DetectorGenericModel/: CMakeLists.txt
geometry/DetectorGenericModel/src/: DetectorGenericConstruction.cxx  DetectorGenericConstruction.h  LinkDef.h
scripts/: reco_trf.py
